--- a/tokenizer.ipynb
+++ b/tokenizer.ipynb
@@ -1756,6 +1756,36 @@
    "source": [
     "tokenizer.decode(ids)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c2e0f2",
+   "metadata": {},
+   "source": [
+    "### Data sampling with a sliding window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "00c90fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27139\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"sinhala_sentences.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    raw_text = f.read()\n",
+    "    \n",
+    "enc_text = tokenizer.encode(raw_text)\n",
+    "print(len(enc_text))"
+   ]
   }
  ],
  "metadata": {
